force-app/main/default/objects/Contract/fields/ActivatedUsers__c.field-meta.xml
<CustomField>
    <fullName>ActivatedUsers__c</fullName>
    <label>Asset Activated Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>