force-app/main/default/objects/Contract/fields/AutoRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewalDate__c</fullName>
    <formula>EndDate - 36</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Auto) Renewal date</label>
    <type>Date</type>
</CustomField>