force-app/main/default/objects/Contract/fields/BillingReminderEmail2__c.field-meta.xml
<CustomField>
    <fullName>BillingReminderEmail2__c</fullName>
    <label>Billing Reminder Email 2</label>
    <type>Email</type>
</CustomField>