force-app/main/default/objects/Contract/fields/BillingReminderEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingReminderEmail__c</fullName>
    <label>Billing Reminder Email</label>
    <type>Email</type>
</CustomField>