force-app/main/default/objects/Contract/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <label>Cancellation date</label>
    <type>Date</type>
</CustomField>