force-app/main/default/objects/Contract/fields/ContractPeriodType__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriodType__c</fullName>
    <label>Contract Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>CalendarYear</fullName>
                <label>Calendar Year</label>
            </value>
            <value>
                <fullName>CustomDate</fullName>
                <label>Custom Start and End Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>