force-app/main/default/objects/Contract/fields/ContractRenewalType__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewalType__c</fullName>
    <description>The Renewal Type of this Contract. 
Values are taken from the (Global) Picklist Value Set &quot;Contract Renewal Type&quot;.</description>
    <label>Contract Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Renewal_Type</valueSetName>
    </valueSet>
</CustomField>