force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <description>The Type of Contract. 
Values are taken from the (Global) Picklist Value Set &quot;Invoicing Frequency&quot;.</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Type</valueSetName>
    </valueSet>
</CustomField>