force-app/main/default/objects/Contract/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <formula>Account.OldCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>