force-app/main/default/objects/Contract/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <description>This field is used for Purchase order, Cost Center and Project Number.</description>
    <inlineHelpText>This field is used for Purchase order, Cost Center and Project Number.</inlineHelpText>
    <label>Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>