force-app/main/default/objects/Contract/fields/defaultBilltoAccount__c.field-meta.xml
<CustomField>
    <fullName>defaultBilltoAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Bill-to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Bill-to Account)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>