force-app/main/default/objects/Contract/fields/defaultShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>defaultShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Ship-to account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Ship-to account)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>