force-app/main/default/objects/Contract/fields/Digital_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Digital_Activation_Email__c</fullName>
    <label>Digital Activation Email</label>
    <type>Email</type>
</CustomField>