force-app/main/default/objects/Contract/fields/FollowUpContract__c.field-meta.xml
<CustomField>
    <fullName>FollowUpContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links to the next Contract that has been renewed based on this Contract.</description>
    <inlineHelpText>This field links to the next Contract that has been renewed based on this Contract.</inlineHelpText>
    <label>Follow Up Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Previous Contracts</relationshipLabel>
    <relationshipName>PreviousContracts</relationshipName>
    <type>Lookup</type>
</CustomField>