force-app/main/default/objects/Contract/fields/HEStudents__c.field-meta.xml
<CustomField>
    <fullName>HEStudents__c</fullName>
    <label>HE # Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>