force-app/main/default/objects/Contract/fields/HEUsers__c.field-meta.xml
<CustomField>
    <fullName>HEUsers__c</fullName>
    <label>HE # Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>