force-app/main/default/objects/Contract/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When ticked, all products are indexed. Default is TRUE</description>
    <inlineHelpText>When ticked, all products are indexed. Default is ON.</inlineHelpText>
    <label>Indexation (all products)</label>
    <type>Checkbox</type>
</CustomField>