force-app/main/default/objects/Contract/fields/InvoiceAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account.
This Account will receive the Invoices.</description>
    <inlineHelpText>This Account will receive the Invoices.</inlineHelpText>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Account on Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>