force-app/main/default/objects/Contract/fields/InvoiceTerms__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTerms__c</fullName>
    <label>Invoice terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>