force-app/main/default/objects/Contract/fields/InvoicingAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAddress__c</fullName>
    <inlineHelpText>Delivery Address for Invoices.</inlineHelpText>
    <label>Invoicing Address</label>
    <type>TextArea</type>
</CustomField>