force-app/main/default/objects/Contract/fields/InvoicingDepartment__c.field-meta.xml
<CustomField>
    <fullName>InvoicingDepartment__c</fullName>
    <inlineHelpText>Delivery Department for Invoices.</inlineHelpText>
    <label>Invoicing Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>