force-app/main/default/objects/Contract/fields/InvoicingEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoicingEmail__c</fullName>
    <inlineHelpText>Delivery Email adress for Invoices.</inlineHelpText>
    <label>Invoicing Email</label>
    <type>Email</type>
</CustomField>