force-app/main/default/objects/Contract/fields/InvoicingPaymentTerm_days__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPaymentTerm_days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The Payment Term in Days, to be used on Invoices to Accounts/Customers.
The default value is set to 30 in the Custom Setting &quot;Auto-Invoicing - Invoicing Payment Term (days)&quot;.</description>
    <label>Invoicing Payment Term (days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>