force-app/main/default/objects/Contract/fields/IsUpForInvoicingToday__c.field-meta.xml
<CustomField>
    <fullName>IsUpForInvoicingToday__c</fullName>
    <formula>IF(NextInvoiceDate__c=today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsUpForInvoicingToday</label>
    <type>Checkbox</type>
</CustomField>