force-app/main/default/objects/Contract/fields/isUpForRenewalToday__c.field-meta.xml
<CustomField>
    <fullName>isUpForRenewalToday__c</fullName>
    <formula>IF(AutoRenewalDate__c=today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Up For Renewal Today</label>
    <type>Checkbox</type>
</CustomField>