force-app/main/default/objects/Contract/fields/MasterContract__c.field-meta.xml
<CustomField>
    <fullName>MasterContract__c</fullName>
    <formula>IF(NOT(ISBLANK(RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.Name)), RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.Id, 
IF(NOT(ISBLANK(RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.Name)), RelatedContract__r.RelatedContract__r.RelatedContract__r.RelatedContract__r.Id, 
IF(NOT(ISBLANK(RelatedContract__r.RelatedContract__r.RelatedContract__r.Name)), RelatedContract__r.RelatedContract__r.RelatedContract__r.Id, 
IF(NOT(ISBLANK(RelatedContract__r.RelatedContract__r.Name)), RelatedContract__r.RelatedContract__r.Id, 
IF(NOT(ISBLANK(RelatedContract__r.Name)),RelatedContract__r.Id, 
Id)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Contract</label>
    <type>Text</type>
</CustomField>