force-app/main/default/objects/Contract/fields/MasterContractId__c.field-meta.xml
<CustomField>
    <fullName>MasterContractId__c</fullName>
    <label>Master ContractId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>