force-app/main/default/objects/Contract/fields/MonthlyCancellable__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCancellable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the contract a subscription that can be cancelled on a monthly basis?</description>
    <inlineHelpText>Is the contract a subscription that can be cancelled on a monthly basis?</inlineHelpText>
    <label>Monthly cancellable</label>
    <type>Checkbox</type>
</CustomField>