force-app/main/default/objects/Contract/fields/NextInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>NextInvoiceDate__c</fullName>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>