force-app/main/default/objects/Contract/fields/NumberofUsers__c.field-meta.xml
<CustomField>
    <fullName>NumberofUsers__c</fullName>
    <label>Number of Users</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>