force-app/main/default/objects/Contract/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <label>Orders</label>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>