force-app/main/default/objects/Contract/fields/OriginalEndDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalEndDate__c</fullName>
    <formula>ADDMONTHS(OriginalStartDate__c,OriginalTerm__c)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>