force-app/main/default/objects/Contract/fields/OriginalTerm__c.field-meta.xml
<CustomField>
    <fullName>OriginalTerm__c</fullName>
    <label>Original Term</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>