force-app/main/default/objects/Contract/fields/PEUsers__c.field-meta.xml
<CustomField>
    <fullName>PEUsers__c</fullName>
    <label>PE # Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>