force-app/main/default/objects/Contract/fields/PreviousContract__c.field-meta.xml
<CustomField>
    <fullName>PreviousContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this Contract is a renewal, this field links to the previous Contract.</inlineHelpText>
    <label>Previous Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Follow Up Contracts</relationshipLabel>
    <relationshipName>FollowUpContracts</relationshipName>
    <type>Lookup</type>
</CustomField>