force-app/main/default/objects/Contract/fields/PreviousInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousInvoiceDate__c</fullName>
    <label>Previous Invoice Date</label>
    <type>Date</type>
</CustomField>