force-app/main/default/objects/Contract/fields/RelatedContract__c.field-meta.xml
<CustomField>
    <fullName>RelatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current Contract is related to this.</description>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Related Contract(s)</relationshipLabel>
    <relationshipName>RelatedContracts</relationshipName>
    <type>Lookup</type>
</CustomField>