force-app/main/default/objects/Contract/fields/RenewalContract__c.field-meta.xml
<CustomField>
    <fullName>RenewalContract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicator whether this Contract has been created as a renewal Contract.</inlineHelpText>
    <label>Renewal Contract</label>
    <type>Checkbox</type>
</CustomField>