force-app/main/default/objects/Contract/fields/ServiceContract__c.field-meta.xml
<CustomField>
    <fullName>ServiceContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be filled on Contracts of Type &apos;License Agreement&apos; only!
It contains the (Lookup) to the related Contract of Type &apos;Service&apos;.</description>
    <inlineHelpText>Related Service Contract :: If This Contract is of Contract Type = &apos;Service&apos;, then this field is usually empty.</inlineHelpText>
    <label>Related Service Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Work Order Contracts</relationshipLabel>
    <relationshipName>WorkOrderContracts</relationshipName>
    <type>Lookup</type>
</CustomField>