force-app/main/default/objects/Contract/fields/ShippingReference__c.field-meta.xml
<CustomField>
    <fullName>ShippingReference__c</fullName>
    <description>Used as &apos;For the attention of &apos; field or a specific reference to a location.</description>
    <label>Shipping Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>