force-app/main/default/objects/Contract/fields/SoldUsers__c.field-meta.xml
<CustomField>
    <fullName>SoldUsers__c</fullName>
    <description>Based on Order information for the first order.</description>
    <inlineHelpText>This number is based on the first order, in draft or activated.</inlineHelpText>
    <label>Initial Sold Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>