force-app/main/default/objects/Contract/fields/TempImportRefference__c.field-meta.xml
<CustomField>
    <fullName>TempImportRefference__c</fullName>
    <label>TempImportRefference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>