force-app/main/default/objects/Contract/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <description>Based on number of users from the Assets</description>
    <label>Current Sold Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>