force-app/main/default/objects/Contract/fields/Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expenses__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Cover travel expenses?</description>
    <inlineHelpText>If travel expenses are to be invoiced, check this box</inlineHelpText>
    <label>Travel Expenses</label>
    <type>Checkbox</type>
</CustomField>