force-app/main/default/objects/Contract/fields/VEStudents__c.field-meta.xml
<CustomField>
    <fullName>VEStudents__c</fullName>
    <label>VE # Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>