force-app/main/default/objects/Contract/fields/VEUsers__c.field-meta.xml
<CustomField>
    <fullName>VEUsers__c</fullName>
    <label>VE # Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>